Playable version. View changes on components.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,20 @@
-<app-title></app-title>
-
-<div class="row pl-2">
-  <div class="col-7">
+<div class="row align-top">
+  <div class="col border border-warning">
+    <app-title></app-title>
+  </div>
+</div>
+<div class="row align-middle">
+  <div class="col-8 border-warning border">
     <app-game-table></app-game-table>
   </div>
-  <div class="col-5">
-    <router-outlet></router-outlet>
+  <div class="col-4 border border-warning">
+    <router-outlet ></router-outlet>
   </div>
 </div>
-<div class="pl-2">
-  <app-players-view></app-players-view>
-</div>
+
+
+<app-players-view></app-players-view>
+
 
 
 
