--- a/src/app/game-table/player-game/player-game.component.html
+++ b/src/app/game-table/player-game/player-game.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="border border-warning">
   <div>
     <progress max="1000" min="0" value="{{player.totalScore}}"></progress>
   </div>
