--- a/src/app/players/players-view/player-view/player-view.component.html
+++ b/src/app/players/players-view/player-view/player-view.component.html
@@ -1,8 +1,10 @@
-<a class="pt-2" [routerLink]="['/players/'+playerId]">
+<a class="c" [routerLink]="['/players/'+playerId]">
   <div [style.background-color]="player.color">
-    <h5>{{player.name}}</h5>
-    <div>
-      <img [src]="player.image" [alt]="player.image" width="130px" height="100px">
+    <div class="col">
+      <h5>{{player.name}}</h5>
+    </div>
+    <div class="col">
+      <img [src]="player.image" [alt]="player.image" width="100%" height="235px">
     </div>
   </div>
 </a>
