Add database reading and simple player chooser.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-start-game></app-start-game>
 <div class="row align-top">
   <div class="col border border-warning">
     <app-title></app-title>
@@ -8,13 +9,14 @@
     <app-game-table></app-game-table>
   </div>
   <div class="col-4 border border-warning">
-    <router-outlet ></router-outlet>
+    <router-outlet></router-outlet>
   </div>
 </div>
 
 
-<app-players-view></app-players-view>
-
+<div class="row">
+  <app-players-view></app-players-view>
+</div>
 
 
 
