--- a/src/app/game-table/game-table.component.html
+++ b/src/app/game-table/game-table.component.html
@@ -7,11 +7,11 @@
   </div>
   <div class="col border-warning border">
       <div class="row">
-        <div class="col-md-1 text-center justify-content-center">#</div>
-        <div class="col text-center justify-content-center" *ngFor="let name of playersNames"> {{name}}</div>
+        <div class="col-md-1 text-center">#</div>
+        <div class="col text-center" *ngFor="let player of playerService.getPlayers()"> {{player.name}}</div>
       </div>
-    <div style="overflow-y: scroll; overflow-x: hidden; max-height: 250px">
-      <app-game-row class="text-center" *ngFor="let row of gameRows" [gameRow]="row"></app-game-row>
+    <div style="overflow-y: scroll; overflow-x: hidden; max-height: 250px" *ngIf="gameTableService.getGameRows() !== null">
+      <app-game-row class="text-center" *ngFor="let row of gameTableService.getGameRows()" [gameRow]="row"></app-game-row>
     </div>
   </div>
 </div>
