--- a/src/app/game-table/game-table.component.css
+++ b/src/app/game-table/game-table.component.css
@@ -5,14 +5,15 @@
 .player-view {
   display: grid;
   grid-template-columns: 3fr 2fr;
-  height: 300px;
+  height: 400px;
   position: relative;
   border: solid 1px red;
 }
-div {
-  color: snow;
-}
 .col {
-
+  color: snow;
+  height: 400px;
+}
+.row {
+  height: 30px;
 }
 
