--- a/src/app/game/game-table/game-progress/game-progress.component.html
+++ b/src/app/game/game-table/game-progress/game-progress.component.html
@@ -1,11 +1,10 @@
-<div class="border border-warning">
-  <div>
+<div class="game-progress">
+  <div class="game-progress">
     <progress max="1000" min="0" value="{{player.totalScore}}"></progress>
   </div>
-  <div>
+  <div class="game-progress">
     <p>{{player.name}}: {{player.totalScore}} : {{player.actualCollectedScore}}</p>
   </div>
 </div>
-
 
 
