--- a/src/app/players/player-choice/player-choice.component.html
+++ b/src/app/players/player-choice/player-choice.component.html
@@ -1,3 +1,6 @@
-<button (click)="toggle()" [@clickedNotClicked]="isClicked ? 'notClicked' : 'clicked'" class="player">
+<button
+        (click)="toggleIsClicked()"
+        [@clickedNotClicked]="isClicked ? 'notClicked' : 'clicked'"
+        class="player">
   {{player.name}}
 </button>
