--- a/src/app/players/players-view/players-view.component.html
+++ b/src/app/players/players-view/players-view.component.html
@@ -1,4 +1,4 @@
-<app-player-view class="col-3 float-left pb-3 border border-warning" *ngFor="let player of playerService.getPlayers(); let i = index"
+<app-player-view class="" *ngFor="let player of playerService.getPlayers(); let i = index"
                  [player]="player"
                  [playerId]="i">
 </app-player-view>
