--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,8 @@
-<app-start-game></app-start-game>
-<div class="row align-top">
-  <div class="col border border-warning">
-    <app-title></app-title>
-  </div>
-</div>
-<div class="row align-middle">
-  <div class="col-8 border-warning border">
-    <app-game-table></app-game-table>
-  </div>
-  <div class="col-4 border border-warning">
-    <router-outlet></router-outlet>
-  </div>
+<div class="main-site"
+     [@routeAnimations]="prepareRoute(outlet)">
+  <router-outlet #outlet="outlet"></router-outlet>
 </div>
 
-
-<div class="row">
-  <app-players-view></app-players-view>
-</div>
 
 
 
