--- a/src/app/players/player-choice/player-choice.component.css
+++ b/src/app/players/player-choice/player-choice.component.css
@@ -1,5 +1,10 @@
 .player {
   width: 100px;
   height: 100px;
-  border: 1px solid orangered;
+  margin: 10px;
+  font-weight: 500;
+  background-color: black;
+}
+.player:hover {
+  background-color: orange;
 }
