--- a/src/app/players/player-details/player-details.component.css
+++ b/src/app/players/player-details/player-details.component.css
@@ -1,10 +1,17 @@
+table {
+  margin: auto;
+  color: #B8B8B8;
+  border: 1px solid orangered;
+}
+
+th,td {
+  text-align: left;
+  border: 1px solid orangered;
+  text-align: center;
+}
+
 img {
-  position: center;
-}
-.col {
-  text-align: center;
-}
-.border {
-  align-content: center;
-  text-align: center;
+  border: 1px solid dimgrey;
+  width: 200px;
+  height: 200px;
 }
