--- a/src/app/players/players-view/player-view/player-view.component.css
+++ b/src/app/players/players-view/player-view/player-view.component.css
@@ -1,8 +1,18 @@
 h5 {
   text-align: center;
+  color: #B8B8B8;
+}
+.each {
+  padding-bottom: 5px;
+  border: solid orangered 1px;
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
+.each:hover {
+  background-color: orangered;
 }
 .col {
-  align-content: center;
+  align-content: end;
 }
 a:link {
   text-decoration: none;
@@ -22,7 +32,5 @@ a:hover {
 a:active {
   text-decoration: underline;
 }
-img {
 
-}
 
