--- a/src/app/start-game/start-game.component.css
+++ b/src/app/start-game/start-game.component.css
@@ -1,20 +1,23 @@
-html {
-  font-family: sans-serif;
-}
-
-body {
-  margin: 0;
-}
-
-header {
-  background: purple;
-  height: 100px;
-}
-/* Add your flexbox CSS below here */
-section {
+.site {
   display: flex;
-}
-main {
+  align-items: flex-end;
+  justify-content: center;
   background-color: black;
+  height: 50vh;
+  flex-wrap: wrap;
+}
+.start-button {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  background-color: black;
+  height: 50vh;
+}
+button {
+  height: 45px;
+  border-radius: 15px;
+  width: 80%;
+  height: 100px;
+  font-size: 35px;
 }
 
