Apply new background, fix wrong computing in progress bars.

--- a/src/app/game/game-table/game-progress/game-progress.component.css
+++ b/src/app/game/game-table/game-progress/game-progress.component.css
@@ -42,5 +42,6 @@ progress[value]::-webkit-progress-value {
   100% { background-position: -100px 0;}
 }
 .game-progress {
+  position: relative;
   width: 100%;
 }
