--- a/src/app/game/game-table/game-table.component.html
+++ b/src/app/game/game-table/game-table.component.html
@@ -1,18 +1,14 @@
-<!--<div class="names">#</div>-->
-<!--<div class="names"-->
-<!--     *ngFor="let player of playerService.getPlayers()">-->
-<!--  {{player.name}}</div>-->
 <table class="game-table">
   <thead>
   <tr>
     <th>#</th>
-    <th *ngFor="let player of playerService.getPlayers()">{{player.name}}</th>
+    <th *ngFor="let name of playersNames">{{name}}</th>
   </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let gameRow of gameTableService.getGameRows(); let i = index">
+    <tr *ngFor="let gameRow of this.gameRows; let i = index">
       <td>{{i+1}}</td>
-      <ng-container *ngFor="let value of gameRow.playerScores">
+      <ng-container *ngFor="let value of gameRow">
         <td *ngIf="value === 1000">bomba</td>
         <td *ngIf="value !== 1000">{{value}}</td>
       </ng-container>
