--- a/src/app/players/player-choice/player-choice.component.css
+++ b/src/app/players/player-choice/player-choice.component.css
@@ -3,8 +3,16 @@
   height: 100px;
   margin: 10px;
   font-weight: 500;
-  background-color: black;
+  background-color: transparent;
+  text-align: center;
+  outline: none;
+  z-index: 4;
 }
 .player:hover {
-  background-color: orange;
+  background-color: black;
+  color: #B8B8B8;
 }
+input {
+  z-index: 4;
+}
+
