--- a/src/app/start-game/start-game.component.html
+++ b/src/app/start-game/start-game.component.html
@@ -2,6 +2,6 @@
   <app-player-choice *ngFor="let player of players" [player]="player"> {{player.name}}</app-player-choice>
 </div>
 <div class="start-button">
-  <button routerLink="/game" class="btn btn-outline-secondary" (click)="startGame()"> Let's play :)</button>
+  <button routerLink="/game" class="btn btn-outline-secondary"> Let's play :)</button>
 </div>
 
