--- a/src/app/game/game.component.css
+++ b/src/app/game/game.component.css
@@ -7,7 +7,8 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: 16%;
+  position: relative;
+  width: 16vw;
   height: 100vh;
 }
 .middle-view {
@@ -15,23 +16,27 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 42%;
+  width: 42vw;
 }
 
 .game-progress {
   width: 90%;
+  z-index: 4;
 }
 
 .player-details {
   width: 90%;
   text-align: center;
+  z-index: 4;
 }
 
 .game {
   justify-content: space-between;
   align-items: center;
-  width: 42%;
-  overflow-y: scroll;
+  width: 42vw;
+  overflow-y: hidden;
   overflow-x: hidden;
   max-height: 100vh;
+  position: relative;
+  z-index: 4;
 }
