--- a/src/app/players/players-view/player-view/player-view.component.html
+++ b/src/app/players/players-view/player-view/player-view.component.html
@@ -1,10 +1,10 @@
 <a [routerLink]="['/game/players/'+playerId]" >
-  <div class="each" [style.background-color]="player.color">
+  <div class="each" [style.background-color]="playerNumber === playerId ? 'black' : 'transparent'">
     <div class="col">
       <h5>{{player.name}}</h5>
     </div>
     <div class="col">
-      <img [src]="player.image" [alt]="player.image" width="100%" height="100px">
+      <img [src]="player.image" [alt]="player.image">
     </div>
   </div>
 </a>
