Add shuffle view for players and frontend minor fixes.

--- a/src/app/game/game.component.css
+++ b/src/app/game/game.component.css
@@ -2,6 +2,7 @@
   background-color: black;
   display: flex;
   flex-direction: row;
+  font-family: Courier New, serif;
 }
 .players {
   display: flex;
