--- a/src/app/start-game/start-game.component.css
+++ b/src/app/start-game/start-game.component.css
@@ -6,6 +6,7 @@
   height: 50vh;
   flex-wrap: wrap;
   z-index: 4;
+  font-family: Courier New, serif;
 }
 .start-button {
   display: flex;
@@ -14,6 +15,7 @@
   position: relative;
   height: 50vh;
   z-index: 4;
+  font-family: Courier New, serif;
 }
 button {
   border-radius: 15px;
