--- a/src/app/game/game.component.css
+++ b/src/app/game/game.component.css
@@ -4,6 +4,18 @@
   flex-direction: row;
   font-family: Courier New, serif;
 }
+.shuffle{
+  position: absolute;
+  left: 50vw;
+  margin-left: -150px;
+  top: 50vh;
+  margin-top: -150px;
+  height: 300px;
+  width: 300px;
+  border: black solid 1px;
+  background-color: #B8B8B8;
+  z-index: 4;
+}
 .players {
   display: flex;
   flex-direction: row;
