--- a/src/app/players/player-choice/player-choice.component.html
+++ b/src/app/players/player-choice/player-choice.component.html
@@ -1,3 +1,3 @@
 <input (keyup)="onKey($event)" value="{{player.name}}" (click)="toggleIsClicked()"
        [@clickedNotClicked]="isClicked ? 'notClicked' : 'clicked'"
-       class="player">
+       class="player" #playerView>
